// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProductTitle Should show the component with product name 1`] = `
<div>
  <div
    class="productCard undefined"
  >
    <span
      class="productDescription undefined"
    >
      Coffee Mug - Con Imagen
    </span>
  </div>
</div>
`;

exports[`ProductTitle renders ProductTitle component width custom title succeded 1`] = `
<div>
  <span
    class="productDescription undefined"
  >
    Custom title
  </span>
</div>
`;
